<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivtity"
    android:background="@drawable/bgregister">


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="161.7dp"
        android:layout_height="169dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="99.3dp"
        android:layout_marginLeft="99.3dp"
        android:layout_marginTop="34.3dp"
        android:layout_marginEnd="259dp"
        android:layout_marginRight="259dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView7"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="300dp"
        android:layout_marginRight="300dp"
        android:layout_marginBottom="-121dp"
        android:fontFamily="@font/gontserratbold"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/loguserpassword"
        android:layout_width="364dp"
        android:layout_height="49dp"
        android:layout_alignBottom="@+id/loguseremail"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="158dp"
        android:layout_marginRight="158dp"
        android:layout_marginBottom="-118dp"
        android:backgroundTint="@color/fuel_orange"
        android:ems="10"
        android:fontFamily="@font/poppinssemibold"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/loguseremail"
        android:layout_width="364dp"
        android:layout_height="49dp"
        android:layout_below="@+id/imageView7"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="155dp"
        android:layout_marginRight="155dp"
        android:layout_marginBottom="-72dp"
        android:backgroundTint="@color/fuel_orange"
        android:ems="10"
        android:fontFamily="@font/poppinssemibold"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="18sp" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="321dp"
        android:layout_height="61dp"
        android:layout_alignBottom="@+id/loguserpassword"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="185dp"
        android:layout_marginRight="185dp"
        android:layout_marginBottom="-109dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/login"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/toregisterlink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/loginbtn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="168dp"
        android:layout_marginRight="168dp"
        android:layout_marginBottom="-101dp"
        android:fontFamily="@font/gontserratbold"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/loginbtn"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="129dp"
        android:layout_marginLeft="129dp"
        android:layout_marginBottom="-101dp"
        android:fontFamily="@font/gontserratbold"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/loginbtn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="184dp"
        android:layout_marginRight="184dp"
        android:layout_marginBottom="-84dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="127dp"
        android:layout_marginBottom="65dp"
        android:fontFamily="@font/gontserratbold"
        android:text="Become A Driver"
        android:textColor="@color/black"
        android:textSize="20sp" />

</RelativeLayout>