<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".MenuActivities.Customer">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:scrollbars="vertical"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/gontserratbold"
                android:gravity="center"
                android:padding="10dp"
                android:text="Grocery Shopping"
                android:textColor="@color/fuel_orange"
                android:textSize="40sp" />

            <EditText
                android:id="@+id/textEmail2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/ic_mail"
                android:gravity="center"
                android:hint="Email"
                android:textColor="@color/black"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:inputType="textEmailAddress"
                android:padding="20dp"/>
            <EditText
                android:id="@+id/textNumber2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:drawableStart="@drawable/ic_phone"
                android:gravity="center"
                android:hint="Phone Number"
                android:inputType="number"
                android:padding="20dp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:prompt="@string/spinner_mall"
                android:textColor="@color/black"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="20dp"/>
            <Spinner
                android:id="@+id/spinner2Shop"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColor="@color/black"
                android:prompt="@string/spinner_shop"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="20dp"/>
            <EditText
                android:id="@+id/textProduct2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColor="@color/black"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:inputType="textPersonName"
                android:hint="Add Shopping List"
                android:gravity="center"
                android:padding="20dp"
                android:drawableStart="@drawable/baseline_shopping_basket_24"
                />

            <EditText
                android:id="@+id/textTo2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColor="@color/black"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:inputType="textPersonName"
                android:hint="Destination"
                android:gravity="center"
                android:padding="20dp"
                android:drawableStart="@drawable/ic_baseline_add_location_24"
                />
            <Spinner
                android:id="@+id/spinner3Pay"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColor="@color/black"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:prompt="@string/spinner_payment"
                android:gravity="center"
                android:padding="20dp"/>

            <Button
                android:id="@+id/btnCheckOut"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/fuel_orange"
                android:fontFamily="sans-serif-black"
                android:padding="10dp"
                android:text="Check out"
                android:textColor="#1B1515"
                android:textSize="18sp" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>